Bug 377385 - Some icons are missing on Gnome
Summary: Some icons are missing on Gnome
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: GUI/Usability (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: K3b Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-08 15:05 UTC by Patrick Silva
Modified: 2017-10-13 02:35 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (150.15 KB, image/png)
2017-03-08 15:05 UTC, Patrick Silva
Details
plugins settings (197.26 KB, image/png)
2017-03-08 15:06 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2017-03-08 15:05:35 UTC
Created attachment 104458 [details]
screenshot

I'm running k3b-git on Arch from AUR, I use the default Gnome icon theme (Adwaita).
"Copy medium" icon is missing in main windows, plugins icons are missing in settings dialog. See the screenshots please.
Comment 1 Patrick Silva 2017-03-08 15:06:13 UTC
Created attachment 104459 [details]
plugins settings
Comment 2 Leslie Zhai 2017-03-10 03:49:24 UTC
(In reply to Dr. Chapatin from comment #0)
> Created attachment 104458 [details]
> screenshot
> 
> I'm running k3b-git on Arch from AUR, I use the default Gnome icon theme
> (Adwaita).

Hi Dr.Chapatin,

There is *NO* icon to express "Copy Medium", but KDE icon theme (breeze) has one: tools-media-optical-copy, so please ask GNOME icon theme designers to draw one ;-)

Regards,
Leslie Zhai
Comment 3 Leslie Zhai 2017-03-10 04:12:50 UTC
Git commit 940dcdbdf32bfc7c338ba12fcd12ef0104c1938f by Leslie Zhai.
Committed on 10/03/2017 at 04:12.
Pushed by lesliezhai into branch 'master'.

Fix some icons are missing on GNOME issue

M  +10   -2    src/option/k3boptiondialog.cpp

https://commits.kde.org/k3b/940dcdbdf32bfc7c338ba12fcd12ef0104c1938f
Comment 4 Patrick Silva 2017-03-10 13:11:22 UTC
Thank you, Leslie.
Here is the bug report in Gnome bugzilla about this issue.
https://bugzilla.gnome.org/show_bug.cgi?id=779849
Comment 5 Leslie Zhai 2017-10-13 02:35:27 UTC
*** Bug 385094 has been marked as a duplicate of this bug. ***