Fix some icons are missing on GNOME issue

BUG: 377385